--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,12 +120,94 @@ li {
   main styling starts here
 =================================*/
 
+.row{
+  display: block;
+}
 
+.inline-div{
+  display: inline-block;
+  float: left;
+}
 
+a::after{
+  display: block;
+}
 
+section a, input[type="submit"]{
+  margin-top: 5px;
+  border:2px solid #ccc;
+  color: #666666;
+  border-radius: 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 10px 25px;
+}
 
+.fa-custom{
+  color: #49bd8b;
+}
 
+p, .sub-feature li{
+  color: #666666;
+}
+/*========================
+Banner styling start
+ =========================*/
+.banner{
+  background: #753d77;
+  padding-top: 30vh;
+  padding-bottom: 20vh;
+  color: #ffffff;
+}
 
+.inline-div {
+  width: 50%;
+}
+
+.banner-div, .sub-feature{
+  margin: 30px;
+}
+
+.banner-div h2{
+  font-size: 40px;
+}
+
+.banner a{
+  margin-top: 5px;
+  background: #49bd8b;
+  color: #ffffff;
+  border-radius: 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 10px 20px;
+}
+
+.banner p{
+  font-size: 20px;
+  color: #ccc;
+}
+/*========================
+Banner styling end
+ =========================*/
+
+/*========================
+feature styling start
+ =========================*/
+
+ /*========================
+feature styling end
+ =========================*/
+.feature, .info{
+  padding: 35px 20px; 
+}
+
+.feature h3{
+  font-size: 30px;
+}
+
+.feature li, .sub-feature h3, .sub-feature p{
+  padding: 10px;
+}
 
 /*=================================
   main styling ends here
